Fixes nav icon overlapping nav items

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1011,9 +1011,6 @@ input[type="search"]::-webkit-search-decoration {
 	.widget .extendednavigation {
 		border-bottom: none;
 	}
-	.widget .extendednavigation ul {
-		padding: 0;
-	}
 	.widget .extendednavigation ul li,
 	.widget .extendednavigation ul.align-left li {
 		padding: 0;
